Refactor and optimize code across multiple modules
- Removed unused imports and variables in `adversarial_coevolution.py`, `cognitive_architecture.py`, and `heterogeneous_training.py`.
- Updated plotting functions to use unpacking for subplots in `adversarial_coevolution.py` and `heterogeneous_training.py`.
- Enhanced `ConsciousChatbot` to support heterogeneous agents, adjusting confidence handling based on agent type.
- Improved logging messages for clarity in `heterogeneous_architecture.py` and `sparse_memory.py`.
- Added confidence tracking in `ConsciousSwarm` to facilitate communication among agents based on uncertainty.
- Streamlined agent stepping logic in `heterogeneous_training.py` to remove unnecessary variable assignments.

--- a/02_Learning_and_Dreaming.ipynb
+++ b/02_Learning_and_Dreaming.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "15c0d445",
+   "metadata": {},
+   "source": [
+    "# 🌙 Learning and Dreaming\n",
+    "## Phase 1.5: Episodic Memory & Sleep Consolidation\n",
+    "\n",
+    "This notebook explores the role of **Episodic Memory** and **Sleep** in the cognitive architecture.\n",
+    "\n",
+    "### Theoretical Foundation\n",
+    "\n",
+    "1.  **Episodic Memory (Hippocampus):**\n",
+    "    *   Stores specific personal experiences (what, where, when).\n",
+    "    *   **Implementation:** A content-addressable memory bank storing `(State, Action, Reward, NextState)` tuples. Retrieval is done via cosine similarity (simulating neural associative recall).\n",
+    "\n",
+    "2.  **Sleep Consolidation (Hippocampus -> Neocortex):**\n",
+    "    *   **Wakefulness:** Experiences are stored rapidly in the hippocampus (fast learning, limited capacity).\n",
+    "    *   **Sleep:** Experiences are \"replayed\" to train the neocortex (slow learning, large capacity). This prevents \"catastrophic forgetting\" and builds a stable world model.\n",
+    "    *   **Dreaming:** The World Model generates hypothetical scenarios to train the policy without real-world risk.\n",
+    "\n",
+    "### Experiment\n",
+    "\n",
+    "We will:\n",
+    "1.  Let an agent interact with a fixed environment.\n",
+    "2.  Observe its memory buffer filling up.\n",
+    "3.  Trigger a \"Sleep Cycle\" where it trains its World Model on stored memories.\n",
+    "4.  Measure the improvement in prediction accuracy (MSE) after sleep.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "23532330",
