--- a/04_Multi_Agent_Swarm_Demo.ipynb
+++ b/04_Multi_Agent_Swarm_Demo.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7ab0ea04",
+   "metadata": {},
+   "source": [
+    "# 🐝 Multi-Agent Swarm Dynamics\n",
+    "## Phase 2: Collective Intelligence\n",
+    "\n",
+    "This notebook explores **Phase 2** of the roadmap: scaling from a single conscious entity to a **Collective Intelligence**.\n",
+    "\n",
+    "### Theoretical Foundation: Swarm Intelligence\n",
+    "\n",
+    "In nature, individual agents (ants, bees, neurons) with limited intelligence can give rise to complex, intelligent behavior at the group level. This is known as **Emergence**.\n",
+    "\n",
+    "*   **Distributed Cognition:** No single agent holds the entire \"truth\". Knowledge is distributed across the swarm.\n",
+    "*   **Consensus Mechanisms:** How does the group decide? We implement a **Global Workspace Broadcast** where agents can \"shout\" their thoughts to the group, and the most relevant thoughts amplify.\n",
+    "\n",
+    "### The Experiment\n",
+    "\n",
+    "We simulate a swarm of `BicameralAgent` instances.\n",
+    "1.  **Individual Processing:** Each agent processes a subset of the data or a specific perspective.\n",
+    "2.  **Broadcasting:** Agents broadcast their internal workspace state to neighbors.\n",
+    "3.  **Synchronization:** We measure **Neural Synchrony**—the degree to which the internal states of the agents align. High synchrony indicates a \"shared thought\" or consensus.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "25922c32",
