--- a/05_Phase_Transitions.ipynb
+++ b/05_Phase_Transitions.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5ca5a338",
+   "metadata": {},
+   "source": [
+    "# 🌊 Phase Transitions & Criticality\n",
+    "## Phase 3: The Edge of Chaos\n",
+    "\n",
+    "This notebook investigates **Phase 3**: the thermodynamic properties of the cognitive system.\n",
+    "\n",
+    "### Theoretical Foundation: Criticality Hypothesis\n",
+    "\n",
+    "Neuroscience suggests that the brain operates at a **Critical Point**—a phase transition between order and chaos.\n",
+    "*   **Order (Sub-critical):** Activity dies out quickly. Stable but rigid.\n",
+    "*   **Chaos (Super-critical):** Activity explodes (seizures). Unstable and noisy.\n",
+    "*   **Criticality:** Activity propagates over long distances without dying or exploding. This maximizes information processing and dynamic range.\n",
+    "\n",
+    "### Integrated Information Theory (IIT)\n",
+    "\n",
+    "We also touch upon **IIT (Phi)**, which proposes that consciousness corresponds to the capacity of a system to integrate information.\n",
+    "*   **Integration:** The system behaves as a whole, not just a collection of parts.\n",
+    "*   **Differentiation:** The system has a vast repertoire of possible states.\n",
+    "\n",
+    "### The Experiment\n",
+    "\n",
+    "We vary the `temperature` (noise level) and `coupling` (connection strength) of the Global Workspace and measure:\n",
+    "1.  **Avalanche Size:** How far does a single perturbation spread?\n",
+    "2.  **Susceptibility:** How sensitive is the system to input?\n",
+    "We look for the \"sweet spot\" where the system is most responsive.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "847cc575",
    "metadata": {},
    "outputs": [],
@@ -30,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "cff58195",
    "metadata": {},
    "outputs": [
@@ -92,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "ac30b19c",
    "metadata": {},
    "outputs": [
@@ -181,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "4a25b50d",
    "metadata": {},
    "outputs": [
@@ -272,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "12445535",
    "metadata": {},
    "outputs": [
@@ -362,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "028c5d72",
    "metadata": {},
    "outputs": [
@@ -446,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "62935743",
    "metadata": {},
    "outputs": [
@@ -518,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "b4737f44",
    "metadata": {},
    "outputs": [
@@ -612,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "ac7f3173",
    "metadata": {},
    "outputs": [
