--- a/06_Heterogeneous_Compute.ipynb
+++ b/06_Heterogeneous_Compute.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "01ed10c6",
+   "metadata": {},
+   "source": [
+    "# ⚡ Heterogeneous Compute (NPU/GPU)\n",
+    "## Phase 4: Hardware-Aware Cognition\n",
+    "\n",
+    "This notebook demonstrates **Phase 4**: optimizing the architecture for Apple Silicon's heterogeneous compute capabilities.\n",
+    "\n",
+    "### Theoretical Foundation: The Energy Budget\n",
+    "\n",
+    "The human brain consumes only ~20 Watts, yet outperforms supercomputers in general tasks. It achieves this through extreme efficiency.\n",
+    "*   **Specialization:** Different brain regions are specialized for different tasks.\n",
+    "*   **Precision:** Not all thoughts require high precision. Intuition is often \"fuzzy\" (low precision), while math is \"sharp\" (high precision).\n",
+    "\n",
+    "### Implementation: Mixed-Precision & Device Placement\n",
+    "\n",
+    "We map the cognitive architecture to the hardware:\n",
+    "1.  **System 1 (Intuition) -> NPU:**\n",
+    "    *   **Device:** Neural Engine (ANE).\n",
+    "    *   **Precision:** `float16` or `int8` (quantized).\n",
+    "    *   **Characteristics:** Fast, low power, high throughput, but lower flexibility. Perfect for the \"always-on\" stream of consciousness.\n",
+    "2.  **System 2 (Reasoning) -> GPU:**\n",
+    "    *   **Device:** Metal GPU.\n",
+    "    *   **Precision:** `float32` or `bfloat16`.\n",
+    "    *   **Characteristics:** High flexibility, massive parallelism, higher power. Used for complex deliberation and learning.\n",
+    "\n",
+    "### The Experiment\n",
+    "\n",
+    "We benchmark the performance (tokens/sec) and latency of running the agent in:\n",
+    "*   **Homogeneous Mode:** Everything on GPU.\n",
+    "*   **Heterogeneous Mode:** System 1 on NPU (simulated via CPU/GPU split if NPU is locked), System 2 on GPU.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "09bb74a6",
