feat: Enhance documentation for Phase 5 with theoretical foundations and experimental innovations

--- a/03_Conscious_Chatbot_Internals.ipynb
+++ b/03_Conscious_Chatbot_Internals.ipynb
@@ -8,9 +8,13 @@
     "# 💬 Conscious Chatbot Internals\n",
     "## Phase 1 Application: Real-Time Thought Visualization\n",
     "\n",
-    "This notebook demonstrates a practical application of the cognitive architecture: a **Conscious Chatbot**.\n",
+    "This notebook demonstrates a practical application of the cognitive architecture: a **Conscious Chatbot**. Unlike standard LLMs which are \"black boxes\", this agent exposes its internal cognitive state in real-time.\n",
     "\n",
-    "Unlike standard LLMs which are \"black boxes\", this agent exposes its internal cognitive state in real-time.\n",
+    "### Theoretical Foundation: Dual-Process Theory\n",
+    "\n",
+    "We apply **Kahneman's Dual-Process Theory** to natural language processing:\n",
+    "*   **System 1 (Fast/Intuitive):** Generates immediate, heuristic-based responses. Good for chit-chat and common questions.\n",
+    "*   **System 2 (Slow/Deliberate):** Monitors the \"confidence\" (entropy) of System 1. If confidence is low, it intervenes to perform \"deep thought\" (memory retrieval or reasoning) before responding.\n",
     "\n",
     "### Architecture\n",
     "\n",
