--- a/07_Hardware_Aware_Cognition.ipynb
+++ b/07_Hardware_Aware_Cognition.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b895a851",
+   "metadata": {},
+   "source": [
+    "# 🧠 Hardware-Aware Cognition\n",
+    "## Phase 5: Efficiency, Sparsity, and Evolution\n",
+    "\n",
+    "This notebook demonstrates **Phase 5** of the roadmap: advanced optimizations that align the cognitive architecture with the physical constraints and capabilities of the hardware (Apple Silicon).\n",
+    "\n",
+    "### Theoretical Foundation\n",
+    "\n",
+    "1.  **Biological Efficiency:** The brain operates on ~20 Watts. It achieves this through **Sparsity** (few neurons fire at once) and **Heterogeneity** (specialized circuits for different tasks).\n",
+    "2.  **Active Learning (Wake-Sleep):** Learning is not uniform. The brain prioritizes \"surprising\" events (high prediction error) for consolidation during sleep, effectively transferring knowledge from slow, conscious processing (System 2) to fast, unconscious intuition (System 1).\n",
+    "3.  **Adversarial Co-Evolution:** Cognitive systems don't evolve in a vacuum. They evolve to solve \"hard\" problems. We simulate this with an \"Adversarial Teacher\" that constantly finds blind spots in the agent's intuition.\n",
+    "\n",
+    "### The Experiments\n",
+    "\n",
+    "We will demonstrate three key innovations:\n",
+    "1.  **Wake-Sleep Active Learning:** System 1 (NPU) learning from System 2 (GPU) on \"hard\" examples.\n",
+    "2.  **Adversarial Co-Evolution:** A \"Dreamer\" vs. \"Critic\" loop to improve robustness.\n",
+    "3.  **Sparse Memory:** Using Top-k activation storage for 20x memory compression.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a9739f04",
