Enhance documentation and structure across notebooks and README
- Added introductory markdown cells to provide context and theoretical background in:
  - 01_Global_Workspace_Demo.ipynb
  - 02_Learning_and_Dreaming.ipynb
  - 03_Conscious_Chatbot_Internals.ipynb
  - 04_Multi_Agent_Swarm_Demo.ipynb
  - 05_Phase_Transitions.ipynb
  - 06_Heterogeneous_Compute.ipynb
  - 08_Multimodal_Consciousness.ipynb

- Updated README.md to include links to key documents for better understanding of the system architecture and theories.

- Created THEORY_AND_IMPLEMENTATION.md to detail the cognitive science theories and their architectural implementations.

--- a/01_Global_Workspace_Demo.ipynb
+++ b/01_Global_Workspace_Demo.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8826c0a1",
+   "metadata": {},
+   "source": [
+    "# 🧠 Global Workspace Demo: Single-Agent Consciousness\n",
+    "\n",
+    "**Learn about the theoretical foundations first:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) for a complete explanation of Global Workspace Theory, Dual-Process Theory, and how these theories are implemented in this system.\n",
+    "\n",
+    "**Architectural overview:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for detailed diagrams of the bicameral agent and cognitive cycle.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This notebook demonstrates consciousness emerging from a single agent with a Global Workspace.\n",
+    "We explore how a \"stream of consciousness\" flows through an agent's mind as it perceives, thinks, and acts.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "51b41928",
