--- a/03_Conscious_Chatbot_Internals.ipynb
+++ b/03_Conscious_Chatbot_Internals.ipynb
@@ -5,30 +5,21 @@
    "id": "846f4d99",
    "metadata": {},
    "source": [
-    "# 💬 Conscious Chatbot Internals\n",
-    "## Phase 1 Application: Real-Time Thought Visualization\n",
+    "# 🗣️ Conscious Chatbot: Observing the Internal Mind\n",
     "\n",
-    "This notebook demonstrates a practical application of the cognitive architecture: a **Conscious Chatbot**. Unlike standard LLMs which are \"black boxes\", this agent exposes its internal cognitive state in real-time.\n",
+    "**Recommended reading:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) to understand the dual-process theory (System 1 vs System 2) and how the chatbot's confidence and goal vectors emerge from this dialogue.\n",
     "\n",
-    "### Theoretical Foundation: Dual-Process Theory\n",
+    "**Architecture details:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for a diagram of the cognitive cycle and how System 2 monitors System 1's decisions.\n",
     "\n",
-    "We apply **Kahneman's Dual-Process Theory** to natural language processing:\n",
-    "*   **System 1 (Fast/Intuitive):** Generates immediate, heuristic-based responses. Good for chit-chat and common questions.\n",
-    "*   **System 2 (Slow/Deliberate):** Monitors the \"confidence\" (entropy) of System 1. If confidence is low, it intervenes to perform \"deep thought\" (memory retrieval or reasoning) before responding.\n",
+    "---\n",
     "\n",
-    "### Architecture\n",
+    "This notebook visualizes the **internal thoughts** of a conscious chatbot in real-time.\n",
     "\n",
-    "The `ConsciousChatbot` wraps the `BicameralAgent` with a text interface:\n",
-    "1.  **Input:** User text is embedded into a vector.\n",
-    "2.  **Perception:** This vector enters the Global Workspace.\n",
-    "3.  **Cognition:**\n",
-    "    *   **System 1:** Generates an immediate intuitive response.\n",
-    "    *   **System 2:** Monitors confidence. If low, it triggers a \"pause\" to retrieve relevant memories or deliberate.\n",
-    "4.  **Output:** The final workspace state is decoded back into text.\n",
-    "\n",
-    "### Visualization\n",
-    "\n",
-    "We visualize the **Global Workspace State** (128 dimensions) as a heatmap. This represents the \"Stream of Consciousness\"—the evolving thought pattern of the AI as it processes your input.\n"
+    "We observe:\n",
+    "- **Confidence scores:** How sure is System 2 in System 1's proposal?\n",
+    "- **Goal vectors:** What is the chatbot focused on (top-down attention)?\n",
+    "- **Workspace state:** The \"stream of consciousness\" unfolding moment by moment\n",
+    "- **Decision-making:** Where System 2 intervenes with deliberation or imagination"
    ]
   },
   {
