--- a/04_Multi_Agent_Swarm_Demo.ipynb
+++ b/04_Multi_Agent_Swarm_Demo.ipynb
@@ -5,24 +5,29 @@
    "id": "7ab0ea04",
    "metadata": {},
    "source": [
-    "# 🐝 Multi-Agent Swarm Dynamics\n",
-    "## Phase 2: Collective Intelligence\n",
+    "# 🌐 Multi-Agent Swarm: Collective Consciousness Emerges\n",
     "\n",
-    "This notebook explores **Phase 2** of the roadmap: scaling from a single conscious entity to a **Collective Intelligence**.\n",
+    "**Essential reading:** See [`COLLECTIVE_CONSCIOUSNESS.md`](../COLLECTIVE_CONSCIOUSNESS.md) for a complete explanation of how collective consciousness emerges from multiple agents sharing a workspace and unified memory pool.\n",
     "\n",
-    "### Theoretical Foundation: Swarm Intelligence\n",
+    "**Theoretical foundations:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) for sections on collective intelligence and swarm behavior.\n",
     "\n",
-    "In nature, individual agents (ants, bees, neurons) with limited intelligence can give rise to complex, intelligent behavior at the group level. This is known as **Emergence**.\n",
+    "**System architecture:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for diagrams of the swarm infrastructure, collective workspace mechanics, and unified memory architecture.\n",
     "\n",
-    "*   **Distributed Cognition:** No single agent holds the entire \"truth\". Knowledge is distributed across the swarm.\n",
-    "*   **Consensus Mechanisms:** How does the group decide? We implement a **Global Workspace Broadcast** where agents can \"shout\" their thoughts to the group, and the most relevant thoughts amplify.\n",
+    "---\n",
     "\n",
-    "### The Experiment\n",
+    "This notebook demonstrates **Phase 2** of the roadmap: Multi-agent collective consciousness.\n",
     "\n",
-    "We simulate a swarm of `BicameralAgent` instances.\n",
-    "1.  **Individual Processing:** Each agent processes a subset of the data or a specific perspective.\n",
-    "2.  **Broadcasting:** Agents broadcast their internal workspace state to neighbors.\n",
-    "3.  **Synchronization:** We measure **Neural Synchrony**—the degree to which the internal states of the agents align. High synchrony indicates a \"shared thought\" or consensus.\n"
+    "We simulate 10-100 agents that:\n",
+    "1. Share a **512D collective workspace** (the \"group mind\")\n",
+    "2. Contribute to a **unified memory pool** accessible to all agents\n",
+    "3. Receive **top-down modulation** from the collective state\n",
+    "4. Demonstrate **emergent consensus behavior**\n",
+    "\n",
+    "Key phenomena to observe:\n",
+    "- **Bottom-up aggregation:** Individual states combine into collective thought\n",
+    "- **Top-down influence:** Collective state biases individual decisions\n",
+    "- **Knowledge transfer:** One agent's learning benefits all agents\n",
+    "- **Phase synchronization:** Agents naturally coordinate without central control"
    ]
   },
   {
