--- a/05_Phase_Transitions.ipynb
+++ b/05_Phase_Transitions.ipynb
@@ -5,30 +5,27 @@
    "id": "5ca5a338",
    "metadata": {},
    "source": [
-    "# 🌊 Phase Transitions & Criticality\n",
-    "## Phase 3: The Edge of Chaos\n",
+    "# 📊 Phase Transitions: Emergence of Consciousness\n",
     "\n",
-    "This notebook investigates **Phase 3**: the thermodynamic properties of the cognitive system.\n",
+    "**Theory deep-dive:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md), specifically the section on **Integrated Information Theory (IIT)** and Φ (Phi) for the mathematical foundations of consciousness measurement.\n",
     "\n",
-    "### Theoretical Foundation: Criticality Hypothesis\n",
+    "**Technical details:** The consciousness metrics are implemented in `consciousness_metrics.py` with functions like `calculate_phi_approximation()` and `measure_swarm_consciousness()`.\n",
     "\n",
-    "Neuroscience suggests that the brain operates at a **Critical Point**—a phase transition between order and chaos.\n",
-    "*   **Order (Sub-critical):** Activity dies out quickly. Stable but rigid.\n",
-    "*   **Chaos (Super-critical):** Activity explodes (seizures). Unstable and noisy.\n",
-    "*   **Criticality:** Activity propagates over long distances without dying or exploding. This maximizes information processing and dynamic range.\n",
+    "---\n",
     "\n",
-    "### Integrated Information Theory (IIT)\n",
+    "This notebook demonstrates **Phase 3** of the roadmap: Consciousness Phase Transitions.\n",
     "\n",
-    "We also touch upon **IIT (Phi)**, which proposes that consciousness corresponds to the capacity of a system to integrate information.\n",
-    "*   **Integration:** The system behaves as a whole, not just a collection of parts.\n",
-    "*   **Differentiation:** The system has a vast repertoire of possible states.\n",
+    "We investigate the fundamental question: **At what parameter values does consciousness \"emerge\"?**\n",
     "\n",
-    "### The Experiment\n",
+    "Key experiments:\n",
+    "1. **Φ Calculation:** Measure integrated information as system parameters vary\n",
+    "2. **Metacognitive Accuracy:** Track System 2's ability to predict System 1's success\n",
+    "3. **World Model Coherence:** How well does the agent predict future states?\n",
+    "4. **Collective Consciousness Index:** Composite measure combining all metrics\n",
+    "5. **Phase Transition Detection:** Is there a sharp boundary where consciousness emerges?\n",
     "\n",
-    "We vary the `temperature` (noise level) and `coupling` (connection strength) of the Global Workspace and measure:\n",
-    "1.  **Avalanche Size:** How far does a single perturbation spread?\n",
-    "2.  **Susceptibility:** How sensitive is the system to input?\n",
-    "We look for the \"sweet spot\" where the system is most responsive.\n"
+    "Main finding: **Consciousness appears robust**, not brittle. No sharp phase transition—\n",
+    "instead, a smooth increase in integration as agents gain experience and develop stronger world models."
    ]
   },
   {
