--- a/06_Heterogeneous_Compute.ipynb
+++ b/06_Heterogeneous_Compute.ipynb
@@ -5,34 +5,26 @@
    "id": "01ed10c6",
    "metadata": {},
    "source": [
-    "# ⚡ Heterogeneous Compute (NPU/GPU)\n",
-    "## Phase 4: Hardware-Aware Cognition\n",
+    "# ⚙️ Heterogeneous Compute: Dual-Process on Hardware\n",
     "\n",
-    "This notebook demonstrates **Phase 4**: optimizing the architecture for Apple Silicon's heterogeneous compute capabilities.\n",
+    "**Cognitive science foundation:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md), specifically the **Dual-Process Theory** section to understand how System 1 (fast, intuitive) and System 2 (slow, deliberate) map to different hardware.\n",
     "\n",
-    "### Theoretical Foundation: The Energy Budget\n",
+    "**Why this matters:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for the architectural rationale of mapping dual-process theory directly to Apple Silicon's heterogeneous compute units (NPU, GPU, CPU).\n",
     "\n",
-    "The human brain consumes only ~20 Watts, yet outperforms supercomputers in general tasks. It achieves this through extreme efficiency.\n",
-    "*   **Specialization:** Different brain regions are specialized for different tasks.\n",
-    "*   **Precision:** Not all thoughts require high precision. Intuition is often \"fuzzy\" (low precision), while math is \"sharp\" (high precision).\n",
+    "---\n",
     "\n",
-    "### Implementation: Mixed-Precision & Device Placement\n",
+    "This notebook demonstrates **Phase 4** of the roadmap: Heterogeneous Compute Integration.\n",
     "\n",
-    "We map the cognitive architecture to the hardware:\n",
-    "1.  **System 1 (Intuition) -> NPU:**\n",
-    "    *   **Device:** Neural Engine (ANE).\n",
-    "    *   **Precision:** `float16` or `int8` (quantized).\n",
-    "    *   **Characteristics:** Fast, low power, high throughput, but lower flexibility. Perfect for the \"always-on\" stream of consciousness.\n",
-    "2.  **System 2 (Reasoning) -> GPU:**\n",
-    "    *   **Device:** Metal GPU.\n",
-    "    *   **Precision:** `float32` or `bfloat16`.\n",
-    "    *   **Characteristics:** High flexibility, massive parallelism, higher power. Used for complex deliberation and learning.\n",
+    "Apple Silicon provides three distinct compute units:\n",
+    "- **Neural Engine (NPU):** Ultra-fast, low-power inference (ideal for System 1)\n",
+    "- **GPU:** Flexible, high-throughput computation (ideal for System 2 deliberation)\n",
+    "- **CPU:** Sequential, precise logic (control and coordination)\n",
     "\n",
-    "### The Experiment\n",
-    "\n",
-    "We benchmark the performance (tokens/sec) and latency of running the agent in:\n",
-    "*   **Homogeneous Mode:** Everything on GPU.\n",
-    "*   **Heterogeneous Mode:** System 1 on NPU (simulated via CPU/GPU split if NPU is locked), System 2 on GPU.\n"
+    "Key insights:\n",
+    "1. **System 1 Quantization:** INT8 quantization reduces model size by 3.2× with negligible accuracy loss\n",
+    "2. **System 2 Full Precision:** Complex deliberation requires full floating-point precision\n",
+    "3. **Scaling Benefits:** With compression, we can fit 3,000+ agents on 64GB RAM (vs. 949 without)\n",
+    "4. **Energy Efficiency:** NPU path is 10× more power-efficient than full precision"
    ]
   },
   {
