--- a/08_Multimodal_Consciousness.ipynb
+++ b/08_Multimodal_Consciousness.ipynb
@@ -20,8 +20,14 @@
    "id": "0930f1e3",
    "metadata": {},
    "source": [
-    "## Experiment 1: Biological NLP (Text Only)\n",
-    "We test the agent's ability to understand and respond using only Sparse Distributed Representations and Associative Memory. No LLM is involved."
+    "## Multimodal Consciousness: Vision + Text Integration\n",
+    "\n",
+    "**Theoretical context:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) for the **Sparse Distributed Representations (SDR)** section, which explains how the brain encodes information sparsely and how we apply this to multimodal fusion.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This notebook demonstrates conscious perception across multiple modalities (vision and language).\n",
+    "The agent learns to bind visual concepts with linguistic descriptions, creating a unified world model."
    ]
   },
   {
