--- a/02_Learning_and_Dreaming.ipynb
+++ b/02_Learning_and_Dreaming.ipynb
@@ -5,29 +5,22 @@
    "id": "15c0d445",
    "metadata": {},
    "source": [
-    "# 🌙 Learning and Dreaming\n",
-    "## Phase 1.5: Episodic Memory & Sleep Consolidation\n",
+    "# 💤 Learning & Dreaming: Offline Consolidation\n",
     "\n",
-    "This notebook explores the role of **Episodic Memory** and **Sleep** in the cognitive architecture.\n",
+    "**Background reading:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) for how we implement the concept of \"dreaming\" as offline memory consolidation.\n",
     "\n",
-    "### Theoretical Foundation\n",
+    "---\n",
     "\n",
-    "1.  **Episodic Memory (Hippocampus):**\n",
-    "    *   Stores specific personal experiences (what, where, when).\n",
-    "    *   **Implementation:** A content-addressable memory bank storing `(State, Action, Reward, NextState)` tuples. Retrieval is done via cosine similarity (simulating neural associative recall).\n",
+    "This notebook demonstrates the **Dreaming / Sleep Consolidation** phase of consciousness.\n",
     "\n",
-    "2.  **Sleep Consolidation (Hippocampus -> Neocortex):**\n",
-    "    *   **Wakefulness:** Experiences are stored rapidly in the hippocampus (fast learning, limited capacity).\n",
-    "    *   **Sleep:** Experiences are \"replayed\" to train the neocortex (slow learning, large capacity). This prevents \"catastrophic forgetting\" and builds a stable world model.\n",
-    "    *   **Dreaming:** The World Model generates hypothetical scenarios to train the policy without real-world risk.\n",
+    "During dreaming, the agent:\n",
+    "1. Replays experiences from memory (episodic recall)\n",
+    "2. Trains the World Model to predict future states\n",
+    "3. Updates System 1 policy based on consolidated knowledge\n",
+    "4. Strengthens important memories while weakening noise\n",
     "\n",
-    "### Experiment\n",
-    "\n",
-    "We will:\n",
-    "1.  Let an agent interact with a fixed environment.\n",
-    "2.  Observe its memory buffer filling up.\n",
-    "3.  Trigger a \"Sleep Cycle\" where it trains its World Model on stored memories.\n",
-    "4.  Measure the improvement in prediction accuracy (MSE) after sleep.\n"
+    "This is inspired by neuroscience: the hippocampus replays experiences during REM sleep,\n",
+    "and these replays strengthen cortical connections (systems consolidation theory)."
    ]
   },
   {
