Add validation scripts for advanced, integration, and system testing
- Created `validate_advanced.py` to test components like HeterogeneousAgent, VisualCortex, and MultiModalFuser.
- Developed `validate_integration.py` for end-to-end testing of the cognitive pipeline including vision, fusion, and swarm communication.
- Implemented `validate_system.py` to validate single agent cognition, consciousness metrics, confusion threshold experiments, dreaming efficacy, and swarm emergence.

--- a/01_Global_Workspace_Demo.ipynb
+++ b/01_Global_Workspace_Demo.ipynb
@@ -11,10 +11,14 @@
     "\n",
     "**Architectural overview:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for detailed diagrams of the bicameral agent and cognitive cycle.\n",
     "\n",
+    "**Key Terms:** Confused by terms like \"System 1\" or \"Global Workspace\"? Check the [`GLOSSARY.md`](../GLOSSARY.md).\n",
+    "\n",
+    "**Try an Experiment:** Want to test the \"Confusion Threshold\"? See Experiment 1 in [`EXPERIMENTS.md`](../EXPERIMENTS.md).\n",
+    "\n",
     "---\n",
     "\n",
     "This notebook demonstrates consciousness emerging from a single agent with a Global Workspace.\n",
-    "We explore how a \"stream of consciousness\" flows through an agent's mind as it perceives, thinks, and acts.\n"
+    "We explore how a \"stream of consciousness\" flows through an agent's mind as it perceives, thinks, and acts."
    ]
   },
   {
