--- a/02_Learning_and_Dreaming.ipynb
+++ b/02_Learning_and_Dreaming.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "**Background reading:** See [`THEORY_AND_IMPLEMENTATION.md`](../THEORY_AND_IMPLEMENTATION.md) for how we implement the concept of \"dreaming\" as offline memory consolidation.\n",
     "\n",
+    "**Try an Experiment:** Want to measure the benefit of dreaming? See Experiment 2 in [`EXPERIMENTS.md`](../EXPERIMENTS.md).\n",
+    "\n",
     "---\n",
     "\n",
     "This notebook demonstrates the **Dreaming / Sleep Consolidation** phase of consciousness.\n",
