--- a/04_Multi_Agent_Swarm_Demo.ipynb
+++ b/04_Multi_Agent_Swarm_Demo.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "**System architecture:** See [`ARCHITECTURE.md`](../ARCHITECTURE.md) for diagrams of the swarm infrastructure, collective workspace mechanics, and unified memory architecture.\n",
     "\n",
+    "**Try an Experiment:** Want to test how swarm size affects consensus speed? See Experiment 3 in [`EXPERIMENTS.md`](../EXPERIMENTS.md).\n",
+    "\n",
     "---\n",
     "\n",
     "This notebook demonstrates **Phase 2** of the roadmap: Multi-agent collective consciousness.\n",
